--- a/src/Castle.Components.Scheduler.WindsorExtension/Castle.Components.Scheduler.WindsorExtension.csproj
+++ b/src/Castle.Components.Scheduler.WindsorExtension/Castle.Components.Scheduler.WindsorExtension.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Castle.Components.Scheduler.WindsorExtension</RootNamespace>
     <AssemblyName>Castle.Components.Scheduler.WindsorExtension</AssemblyName>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Castle.Components.Scheduler.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
